# bollydog

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README_CN.md  cli.py  config.py  exception.py  pyproject.toml  setup.py
adapters/: elastic.py  orm.py  other.py
bollydog/: bootstrap.py  cli.py  config.py  exception.py  globals.py  logging.py  testing.py
bollydog/adapters/: __init__.py  _base.py  composite.py  elastic.py  file.py  graph.py  local.py  memory.py  neo4j.py  notion.py  orm.py  other.py  rdb.py  sqlalchemy.py
bollydog/entrypoint/cli/: __init__.py
bollydog/entrypoint/http/: app.py  config.py  middleware.py
bollydog/entrypoint/uds/: app.py  config.py
bollydog/entrypoint/websocket/: app.py  config.py
bollydog/models/: base.py  config.py  protocol.py  service.py  state.py
bollydog/patch/: __init__.py  logging.py
bollydog/service/: __init__.py  app.py  broker.py  commands.py  config.py  config.toml  exchange.py  executor.py  handler.py  message.py  model.py  queue.py  registry.py  router.py  runner.py  session.py
docs/: SKILL.md  architecture.html  issue.md  sop.md  spec.md  todo.md
docs/cosmic-python/: 00_book.md  01_preface.md  02_introduction.md  03_part1.md  04_chapter_01_domain_model.md  05_chapter_02_repository.md  06_chapter_03_abstractions.md  07_chapter_04_service_layer.md  08_chapter_05_high_gear_low_gear.md  09_chapter_06_uow.md  10_chapter_07_aggregate.md  11_part2.md  12_chapter_08_events_and_message_bus.md  13_chapter_09_all_messagebus.md  14_chapter_10_commands.md  15_chapter_11_external_events.md  16_chapter_12_cqrs.md  17_chapter_13_dependency_injection.md  18_epilogue_1_how_to_get_there_from_here.md  19_appendix_ds1_table.md  20_appendix_project_structure.md  21_appendix_csvs.md  22_appendix_django.md  23_appendix_validation.md  Architecture Patterns with Python.md
docs/llms/: mode.txt
entrypoint/: __init__.py
entrypoint/cli/: __init__.py
entrypoint/http/: app.py
entrypoint/websocket/: app.py
example/: README.md  app.py  commands.py  config.toml  config.yaml  example.env  handler.py
models/: base.py  config.py  protocol.py  service.py
patch/: __init__.py
requirements/: requirements-dev.txt  requirements.txt
service/: __init__.py  app.py  config.py  handler.py  message.py  model.py  router.py
tests/: config.yml  conftest.py  test_adapters_extra.py  test_command.py  test_composite.py  test_duckdb.py  test_entrypoint.py  test_file_protocol.py  test_hub.py  test_hub_advanced.py  test_integration.py  test_protocol.py  test_session.py  test_sqlalchemy.py  test_stream_state.py  test_topic_match.py
tests/integration/: test_serveice.py
tests/unit/: test_adapter_elastic.py  test_adapter_orm.py  test_handler.py  test_handler_methods.py  test_message.py  test_model_config.py
utils/: base.py
