[project]
name = "bollydog"
version = "0.1.5"
description = "bollydog framework - Async microservice framework with command-as-executable architecture"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "3sy11", email = "sorcerer0001@hotmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "starlette==0.36.3", 
    "uvicorn==0.21.1", 
    "httptools==0.7.1", 
    "starlette-authentication",
    "authlib==1.3.1", 
    "itsdangerous==2.1.2",
    "sqlmodel", 
    "databases==0.9.0", 
    "mode-streaming==0.4.1", 
    "websockets==12.0", 
    "aiohttp",
    "fire==0.5.0",
    "pyyaml==6.0.1",
    "environs",
    "structlog", 
    "ptpython",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-cov", "httpx", "aiosqlite", "aiomonitor"]
cli = ["mycli", "iredis", "pycli"]
viz = ["pydot", "pydot-ng", "graphviz"]
data = ["duckdb", "elasticsearch==8.14.0", "redis", "aioredis"]
dev = ["bollydog[test,cli,viz]","ruff>=0.14.10"]

[project.scripts]
bollydog = "bollydog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=bollydog",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["bollydog"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
