[project]
name = "bollydog"
version = "0.1.5"
description = "bollydog framework - Async microservice framework with command-as-executable architecture"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "3sy11", email = "sorcerer0001@hotmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = "==3.12"
dependencies = [
    "aiohttp==3.13.2",
    "msgspec==0.21.1",
    "authlib==1.6.6",
    "databases==0.9.0",
    "pydantic==2.12.5",
    "environs==14.5.0",
    "fire==0.7.1",
    "httptools==0.7.1",
    "itsdangerous==2.2.0",
    "mode-streaming==0.4.1",
    "ptpython==3.0.32",
    "pyyaml==6.0.3",
    "sqlmodel==0.0.31",
    "starlette==0.50.0",
    "starlette-authentication==0.1",
    "structlog==25.5.0",
    "uvicorn[standard]==0.40.0",
    "websockets==16.0",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "httpx==0.28.1",
    "aiosqlite==0.22.0",
    "aiomonitor==0.7.0",
]
cli = ["mycli==1.67.1", "iredis==1.16.1", "pycli==2.0.3"]
viz = ["pydot==4.0.1", "pydot-ng==2.0.0", "graphviz==0.21"]
data = ["duckdb==1.5.1", "elasticsearch==8.14.0", "redis==7.4.0", "aioredis==2.0.1"]
dev = ["bollydog[test,cli,viz]", "ruff==0.14.10"]

[project.scripts]
bollydog = "bollydog.cli:main"

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=bollydog",
    "--cov-report=term-missing",
    "--cov-report=html:tmp/htmlcov",
    "--cov-report=xml:tmp/coverage.xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests integration tests",
    "unit: marks tests unit tests",
]

[tool.coverage.run]
source = ["bollydog"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.uv]
python-preference = "only-managed"
